src/libvterm/vterm.h


#define VTERM_MAX_CHARS_PER_CELL 6
typedef struct VTerm VTerm;
typedef struct VTermState VTermState;
typedef struct VTermScreen VTermScreen;
typedef struct {
  int row;
  int col;
} VTermPos;
typedef struct {
  int start_row;
  int end_row;
  int start_col;
  int end_col;
} VTermRect;
typedef enum {
  VTERM_COLOR_RGB = 0x00,
  VTERM_COLOR_INDEXED = 0x01,
  VTERM_COLOR_TYPE_MASK = 0x01,
  VTERM_COLOR_DEFAULT_FG = 0x02,
  VTERM_COLOR_DEFAULT_BG = 0x04,
  VTERM_COLOR_DEFAULT_MASK = 0x06
} VTermColorType;
typedef union {
  uint8_t type;
  struct {
    uint8_t type;
    uint8_t red, green, blue;
  } rgb;
  struct {
    uint8_t type;
    uint8_t idx;
  } indexed;
} VTermColor;
typedef enum {
  VTERM_VALUETYPE_BOOL = 1,
  VTERM_VALUETYPE_INT,
  VTERM_VALUETYPE_STRING,
  VTERM_VALUETYPE_COLOR,
  VTERM_N_VALUETYPES
} VTermValueType;
typedef struct {
  const char *str;
  size_t      len : 30;
  bool        initial : 1;
  bool        final : 1;
} VTermStringFragment;
typedef union {
  int boolean;
  int number;
  VTermStringFragment string;
  VTermColor color;
} VTermValue;
typedef enum {
  VTERM_ATTR_BOLD = 1,   
  VTERM_ATTR_UNDERLINE,  
  VTERM_ATTR_ITALIC,     
  VTERM_ATTR_BLINK,      
  VTERM_ATTR_REVERSE,    
  VTERM_ATTR_CONCEAL,    
  VTERM_ATTR_STRIKE,     
  VTERM_ATTR_FONT,       
  VTERM_ATTR_FOREGROUND, 
  VTERM_ATTR_BACKGROUND, 
  VTERM_ATTR_SMALL,      
  VTERM_ATTR_BASELINE,   
  VTERM_ATTR_DIM,        
  VTERM_N_ATTRS
} VTermAttr;
typedef enum {
  VTERM_PROP_CURSORVISIBLE = 1, 
  VTERM_PROP_CURSORBLINK,       
  VTERM_PROP_ALTSCREEN,         
  VTERM_PROP_TITLE,             
  VTERM_PROP_ICONNAME,          
  VTERM_PROP_REVERSE,           
  VTERM_PROP_CURSORSHAPE,       
  VTERM_PROP_MOUSE,             
  VTERM_PROP_FOCUSREPORT,       
  VTERM_N_PROPS
} VTermProp;
typedef struct {
  const uint32_t *chars;
  int             width;
  unsigned int    protected_cell:1;  
  unsigned int    dwl:1;             
  unsigned int    dhl:2;             
} VTermGlyphInfo;
typedef struct {
  unsigned int    doublewidth:1;     
  unsigned int    doubleheight:2;    
  unsigned int    continuation:1;    
} VTermLineInfo;
typedef struct {
  VTermPos pos;                
  VTermLineInfo *lineinfos[2]; 
} VTermStateFields;
VTerm *vterm_new(int rows, int cols);
void   vterm_free(VTerm* vt);
void vterm_get_size(const VTerm *vt, int *rowsp, int *colsp);
void vterm_set_size(VTerm *vt, int rows, int cols);
int  vterm_get_utf8(const VTerm *vt);
void vterm_set_utf8(VTerm *vt, int is_utf8);
size_t vterm_input_write(VTerm *vt, const char *bytes, size_t len);
typedef void VTermOutputCallback(const char *s, size_t len, void *user);
void vterm_output_set_callback(VTerm *vt, VTermOutputCallback *func, void *user);
void vterm_keyboard_unichar(VTerm *vt, uint32_t c, VTermModifier mod);
void vterm_keyboard_key(VTerm *vt, VTermKey key, VTermModifier mod);
typedef struct {
  int (*text)(const char *bytes, size_t len, void *user);
  int (*control)(unsigned char control, void *user);
  int (*escape)(const char *bytes, size_t len, void *user);
  int (*csi)(const char *leader, const long args[], int argcount, const char *intermed, char command, void *user);
  int (*osc)(int command, VTermStringFragment frag, void *user);
  int (*dcs)(const char *command, size_t commandlen, VTermStringFragment frag, void *user);
  int (*apc)(VTermStringFragment frag, void *user);
  int (*pm)(VTermStringFragment frag, void *user);
  int (*sos)(VTermStringFragment frag, void *user);
  int (*resize)(int rows, int cols, void *user);
} VTermParserCallbacks;
void  vterm_parser_set_callbacks(VTerm *vt, const VTermParserCallbacks *callbacks, void *user);
typedef struct {
  int (*putglyph)(VTermGlyphInfo *info, VTermPos pos, void *user);
  int (*movecursor)(VTermPos pos, VTermPos oldpos, int visible, void *user);
  int (*scrollrect)(VTermRect rect, int downward, int rightward, void *user);
  int (*moverect)(VTermRect dest, VTermRect src, void *user);
  int (*erase)(VTermRect rect, int selective, void *user);
  int (*initpen)(void *user);
  int (*setpenattr)(VTermAttr attr, VTermValue *val, void *user);
  int (*settermprop)(VTermProp prop, VTermValue *val, void *user);
  int (*bell)(void *user);
  int (*resize)(int rows, int cols, VTermStateFields *fields, void *user);
  int (*setlineinfo)(int row, const VTermLineInfo *newinfo, const VTermLineInfo *oldinfo, void *user);
  int (*sb_clear)(void *user);
} VTermStateCallbacks;
typedef struct {
  int (*control)(unsigned char control, void *user);
  int (*csi)(const char *leader, const long args[], int argcount, const char *intermed, char command, void *user);
  int (*osc)(int command, VTermStringFragment frag, void *user);
  int (*dcs)(const char *command, size_t commandlen, VTermStringFragment frag, void *user);
  int (*apc)(VTermStringFragment frag, void *user);
  int (*pm)(VTermStringFragment frag, void *user);
  int (*sos)(VTermStringFragment frag, void *user);
  int (*reset)(int hard, void *user);
} VTermStateFallbacks;
typedef struct {
    unsigned int bold      : 1;
    unsigned int underline : 2;
    unsigned int italic    : 1;
    unsigned int blink     : 1;
    unsigned int reverse   : 1;
    unsigned int conceal   : 1;
    unsigned int strike    : 1;
    unsigned int font      : 4; 
    unsigned int dwl       : 1; 
    unsigned int dhl       : 2; 
    unsigned int small     : 1;
    unsigned int baseline  : 2;
    unsigned int dim       : 1;
} VTermScreenCellAttrs;
typedef struct {
  uint32_t chars[VTERM_MAX_CHARS_PER_CELL];
  char     width;
  VTermScreenCellAttrs attrs;
  VTermColor fg, bg;
} VTermScreenCell;
typedef struct {
  int (*damage)(VTermRect rect, void *user);
  int (*erase)(VTermRect rect, void *user);
  int (*moverect)(VTermRect dest, VTermRect src, void *user);
  int (*movecursor)(VTermPos pos, VTermPos oldpos, int visible, void *user);
  int (*settermprop)(VTermProp prop, VTermValue *val, void *user);
  int (*bell)(void *user);
  int (*resize)(int rows, int cols, void *user);
  int (*sb_pushline)(int cols, const VTermScreenCell *cells, void *user);
  int (*sb_popline)(int cols, VTermScreenCell *cells, void *user);
  int (*sb_clear)(void* user);
} VTermScreenCallbacks;
typedef enum {
  VTERM_DAMAGE_CELL,    
  VTERM_DAMAGE_ROW,     
  VTERM_DAMAGE_SCREEN,  
  VTERM_DAMAGE_SCROLL,  
  VTERM_N_DAMAGES
} VTermDamageSize;
typedef enum {
  VTERM_ATTR_BOLD_MASK       = 1 << 0,
  VTERM_ATTR_UNDERLINE_MASK  = 1 << 1,
  VTERM_ATTR_ITALIC_MASK     = 1 << 2,
  VTERM_ATTR_BLINK_MASK      = 1 << 3,
  VTERM_ATTR_REVERSE_MASK    = 1 << 4,
  VTERM_ATTR_STRIKE_MASK     = 1 << 5,
  VTERM_ATTR_FONT_MASK       = 1 << 6,
  VTERM_ATTR_FOREGROUND_MASK = 1 << 7,
  VTERM_ATTR_BACKGROUND_MASK = 1 << 8,
  VTERM_ATTR_CONCEAL_MASK    = 1 << 9,
  VTERM_ATTR_SMALL_MASK      = 1 << 10,
  VTERM_ATTR_BASELINE_MASK   = 1 << 11,
  VTERM_ATTR_DIM_MASK        = 1 << 12,
  VTERM_ALL_ATTRS_MASK = (1 << 13) - 1
} VTermAttrMask;
void vterm_scroll_rect(VTermRect rect,
                       int downward,
                       int rightward,
                       int (*moverect)(VTermRect src, VTermRect dest, void *user),
                       int (*eraserect)(VTermRect rect, int selective, void *user),
                       void *user);
void vterm_copy_cells(VTermRect dest,
                      VTermRect src,
                      void (*copycell)(VTermPos dest, VTermPos src, void *user),
                      void *user);