src/libvterm/vterm_internal.h

typedef struct {
  VTermEncoding *enc;
  char           data[4*sizeof(uint32_t)];
} VTermEncodingInstance;
struct VTermPen
{
  VTermColor fg;
  VTermColor bg;
  unsigned int bold:1;
  unsigned int underline:2;
  unsigned int italic:1;
  unsigned int blink:1;
  unsigned int reverse:1;
  unsigned int conceal:1;
  unsigned int strike:1;
  unsigned int font:4; 
  unsigned int small:1;
  unsigned int baseline:2;
  unsigned int dim:1;
};
struct VTermState
{
  VTerm *vt;
  const VTermStateCallbacks *callbacks;
  void *cbdata;
  const VTermStateFallbacks *fallbacks;
  void *fbdata;
  int rows;
  int cols;
  VTermPos pos;
  int at_phantom; 
  int scrollregion_top;
  int scrollregion_bottom; 
#define SCROLLREGION_BOTTOM(state) ((state)->scrollregion_bottom > -1 ? (state)->scrollregion_bottom : (state)->rows)
  int scrollregion_left;
#define SCROLLREGION_LEFT(state)  ((state)->mode.leftrightmargin ? (state)->scrollregion_left : 0)
  int scrollregion_right; 
#define SCROLLREGION_RIGHT(state) ((state)->mode.leftrightmargin && (state)->scrollregion_right > -1 ? (state)->scrollregion_right : (state)->cols)
  unsigned char *tabstops;
  VTermLineInfo *lineinfos[2];
  VTermLineInfo *lineinfo;
#define ROWWIDTH(state,row) ((state)->lineinfo[(row)].doublewidth ? ((state)->cols / 2) : (state)->cols)
#define THISROWWIDTH(state) ROWWIDTH(state, (state)->pos.row)
  int mouse_col, mouse_row;
  int mouse_buttons;
  int mouse_flags;
#define MOUSE_WANT_CLICK 0x01
#define MOUSE_WANT_DRAG  0x02
#define MOUSE_WANT_MOVE  0x04
  enum { MOUSE_X10, MOUSE_UTF8, MOUSE_SGR, MOUSE_RXVT } mouse_protocol;
  uint32_t *combine_chars;
  size_t combine_chars_size; 
  int combine_width; 
  VTermPos combine_pos;   
  struct {
    unsigned int keypad:1;
    unsigned int cursor:1;
    unsigned int autowrap:1;
    unsigned int insert:1;
    unsigned int newline:1;
    unsigned int cursor_visible:1;
    unsigned int cursor_blink:1;
    unsigned int cursor_shape:2;
    unsigned int alt_screen:1;
    unsigned int origin:1;
    unsigned int screen:1;
    unsigned int leftrightmargin:1;
    unsigned int bracketpaste:1;
    unsigned int report_focus:1;
  } mode;
  VTermEncodingInstance encoding[4], encoding_utf8;
  int gl_set, gr_set, gsingle_set;
  struct VTermPen pen;
  VTermColor default_fg;
  VTermColor default_bg;
  VTermColor colors[16]; 
  int bold_is_highbright;
  unsigned int protected_cell : 1;
  struct {
    VTermPos pos;
    struct VTermPen pen;
    struct {
      unsigned int cursor_visible:1;
      unsigned int cursor_blink:1;
      unsigned int cursor_shape:2;
    } mode;
  } saved;
  union {
    char decrqss[4];
    struct {
      uint16_t mask;
      enum {
        SELECTION_INITIAL,
        SELECTION_SELECTED,
        SELECTION_QUERY,
        SELECTION_SET_INITIAL,
        SELECTION_SET,
        SELECTION_INVALID,
      } state : 8;
      uint32_t recvpartial;
      uint32_t sendpartial;
    } selection;
  } tmp;
  struct {
    const VTermSelectionCallbacks *callbacks;
    void *user;
    char *buffer;
    size_t buflen;
  } selection;
};
struct VTerm
{
  const VTermAllocatorFunctions *allocator;
  void *allocdata;
  int rows;
  int cols;
  struct {
    unsigned int utf8:1;
    unsigned int ctrl8bit:1;
  } mode;
  struct {
    enum VTermParserState {
      NORMAL,
      CSI_LEADER,
      CSI_ARGS,
      CSI_INTERMED,
      DCS_COMMAND,
      OSC_COMMAND,
      OSC,
      DCS,
      APC,
      PM,
      SOS,
    } state;
    bool in_esc : 1;
    int intermedlen;
    char intermed[INTERMED_MAX];
    union {
      struct {
        int leaderlen;
        char leader[CSI_LEADER_MAX];
        int argi;
        long args[CSI_ARGS_MAX];
      } csi;
      struct {
        int command;
      } osc;
      struct {
        int commandlen;
        char command[CSI_LEADER_MAX];
      } dcs;
    } v;
    const VTermParserCallbacks *callbacks;
    void *cbdata;
    bool string_initial;
    bool emit_nul;
  } parser;
  VTermOutputCallback *outfunc;
  void                *outdata;
  char  *outbuffer;
  size_t outbuffer_len;
  size_t outbuffer_cur;
  char  *tmpbuffer;
  size_t tmpbuffer_len;
  VTermState *state;
  VTermScreen *screen;
};